[gd_scene load_steps=4 format=3 uid="uid://llf8e86tdmf3"]

[ext_resource type="Script" path="res://Views/win_screen/win_screen.gd" id="1_o1w0g"]
[ext_resource type="Texture2D" uid="uid://chlhiq0602e1k" path="res://assets/fondo/win.jpeg" id="2_88kk1"]
[ext_resource type="AudioStream" uid="uid://omtcat6b8uii" path="res://assets/audio/game/whistle.ogg" id="3_i85l5"]

[node name="WinScreen" type="CanvasLayer"]
script = ExtResource("1_o1w0g")

[node name="bg" type="ColorRect" parent="."]
offset_right = 1155.0
offset_bottom = 651.0
color = Color(1.58831e-06, 0.409685, 0.530232, 1)

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -33.0
offset_top = -14.0
offset_right = 1191.0
offset_bottom = 720.0
texture = ExtResource("2_88kk1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -169.5
offset_right = 169.5
offset_bottom = 222.0
grow_horizontal = 2

[node name="winer_laber" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Gano el jugador 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="final_score" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "2 - 3"
horizontal_alignment = 1

[node name="separetor" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="new_game_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Revancha"

[node name="exit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Salir"

[node name="endGame" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_i85l5")

[connection signal="button_down" from="VBoxContainer/new_game_button" to="." method="_on_new_game"]
[connection signal="button_down" from="VBoxContainer/exit_button" to="." method="_on_exit"]
